--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.8",
+    "@tabler/icons-react": "^3.18.0",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "framer-motion": "^11.9.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-element-to-jsx-string": "^15.0.0",
+    "react-icons": "^5.3.0",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.169.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.169.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
+    "i": "^0.3.7",
+    "npm": "^10.8.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
